build_log_8.txt
[ 16%] Built target shaders_spirv
[ 18%] Building CXX object CMakeFiles/sisterapp.dir/src/core/application.cpp.o
[ 20%] Building CXX object CMakeFiles/sisterapp.dir/src/terrain/terrain_renderer.cpp.o
/run/media/jpereiratrindade/labeco10T/dev/cpp/SisterAppEngine_base_v330/src/terrain/terrain_renderer.cpp:20:6: error: ‘TerrainRenderer’ has not been declared
   20 | void TerrainRenderer::buildMesh(const terrain::TerrainMap& map) {
      |      ^~~~~~~~~~~~~~~
/run/media/jpereiratrindade/labeco10T/dev/cpp/SisterAppEngine_base_v330/src/terrain/terrain_renderer.cpp: In function ‘void buildMesh(const terrain::TerrainMap&)’:
/run/media/jpereiratrindade/labeco10T/dev/cpp/SisterAppEngine_base_v330/src/terrain/terrain_renderer.cpp:26:24: warning: conversion to ‘std::vector<graphics::Vertex>::size_type’ {aka ‘long unsigned int’} from ‘int’ may change the sign of the result [-Wsign-conversion]
   26 |     vertices.reserve(w * h);
      |                      ~~^~~
/run/media/jpereiratrindade/labeco10T/dev/cpp/SisterAppEngine_base_v330/src/terrain/terrain_renderer.cpp:27:39: warning: conversion to ‘std::vector<short unsigned int>::size_type’ {aka ‘long unsigned int’} from ‘int’ may change the sign of the result [-Wsign-conversion]
   27 |     indices.reserve((w - 1) * (h - 1) * 6);
      |                     ~~~~~~~~~~~~~~~~~~^~~
/run/media/jpereiratrindade/labeco10T/dev/cpp/SisterAppEngine_base_v330/src/terrain/terrain_renderer.cpp:73:49: warning: conversion to ‘std::vector<float>::size_type’ {aka ‘long unsigned int’} from ‘int’ may change the sign of the result [-Wsign-conversion]
   73 |             float sed = map.sedimentMap()[z * w + x];
      |                                           ~~~~~~^~~
/run/media/jpereiratrindade/labeco10T/dev/cpp/SisterAppEngine_base_v330/src/terrain/terrain_renderer.cpp:104:5: error: ‘mesh_’ was not declared in this scope
  104 |     mesh_ = std::make_unique<graphics::Mesh>(ctx_, vertices, indices);
      |     ^~~~~
/run/media/jpereiratrindade/labeco10T/dev/cpp/SisterAppEngine_base_v330/src/terrain/terrain_renderer.cpp:104:46: error: ‘ctx_’ was not declared in this scope
  104 |     mesh_ = std::make_unique<graphics::Mesh>(ctx_, vertices, indices);
      |                                              ^~~~
/run/media/jpereiratrindade/labeco10T/dev/cpp/SisterAppEngine_base_v330/src/terrain/terrain_renderer.cpp: At global scope:
/run/media/jpereiratrindade/labeco10T/dev/cpp/SisterAppEngine_base_v330/src/terrain/terrain_renderer.cpp:108:6: error: ‘TerrainRenderer’ has not been declared
  108 | void TerrainRenderer::render(VkCommandBuffer cmd, const std::array<float, 16>& mvp, VkExtent2D viewport) {
      |      ^~~~~~~~~~~~~~~
/run/media/jpereiratrindade/labeco10T/dev/cpp/SisterAppEngine_base_v330/src/terrain/terrain_renderer.cpp: In function ‘void render(VkCommandBuffer, const std::array<float, 16>&, VkExtent2D)’:
/run/media/jpereiratrindade/labeco10T/dev/cpp/SisterAppEngine_base_v330/src/terrain/terrain_renderer.cpp:109:10: error: ‘mesh_’ was not declared in this scope
  109 |     if (!mesh_ || !material_) return;
      |          ^~~~~
/run/media/jpereiratrindade/labeco10T/dev/cpp/SisterAppEngine_base_v330/src/terrain/terrain_renderer.cpp:109:20: error: ‘material_’ was not declared in this scope
  109 |     if (!mesh_ || !material_) return;
      |                    ^~~~~~~~~
/run/media/jpereiratrindade/labeco10T/dev/cpp/SisterAppEngine_base_v330/src/terrain/terrain_renderer.cpp:112:5: error: ‘material_’ was not declared in this scope
  112 |     material_->bind(cmd);
      |     ^~~~~~~~~
/run/media/jpereiratrindade/labeco10T/dev/cpp/SisterAppEngine_base_v330/src/terrain/terrain_renderer.cpp:138:5: error: ‘mesh_’ was not declared in this scope
  138 |     mesh_->draw(cmd);
      |     ^~~~~
/run/media/jpereiratrindade/labeco10T/dev/cpp/SisterAppEngine_base_v330/src/terrain/terrain_renderer.cpp:108:96: warning: unused parameter ‘viewport’ [-Wunused-parameter]
  108 | void TerrainRenderer::render(VkCommandBuffer cmd, const std::array<float, 16>& mvp, VkExtent2D viewport) {
      |                                                                                     ~~~~~~~~~~~^~~~~~~~
/run/media/jpereiratrindade/labeco10T/dev/cpp/SisterAppEngine_base_v330/src/terrain/terrain_renderer.cpp: At global scope:
/run/media/jpereiratrindade/labeco10T/dev/cpp/SisterAppEngine_base_v330/src/terrain/terrain_renderer.cpp:141:1: error: expected declaration before ‘}’ token
  141 | } // namespace shape
      | ^
gmake[2]: *** [CMakeFiles/sisterapp.dir/build.make:555: CMakeFiles/sisterapp.dir/src/terrain/terrain_renderer.cpp.o] Error 1
gmake[1]: *** [CMakeFiles/Makefile2:90: CMakeFiles/sisterapp.dir/all] Error 2
gmake: *** [Makefile:91: all] Error 2
